Added base routing.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       - ./routes:/www/routes
       - ./views:/www/views
       - ./db:/www/db
+      - ./utils:/www/utils
       - ./errors:/www/errors
   
 networks:
