--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     environment:
       PORT: 80
     build:
-      context: .
+      context: ./docker
       dockerfile: Dockerfile
     networks:
       - soen287-network
