Added conditions for undefined/default values. Minor component fix. Updated routing.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       - ./db:/www/db
       - ./utils:/www/utils
       - ./errors:/www/errors
+      - ./setup:/www/setup
   
 networks:
   soen287-network:
